<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">LayoutDemo</string>
    <string name="loading">Loading...</string>
    <string name="setting_title">Setting</string>
    <string name="setting_back">Back</string>
    <string name="room_description">请输入会议室名称</string>
    <string name="room_userName">请输入用户名</string>
    <string name="blink_description">欢迎体验实时高质量的音视频会议</string>
    <string name="blink_description_version">LayoutDemo V</string>
    <string name="debug_select_dialog_message">Select a network</string>
    <string name="debug_select_dialog_exbutton">Prod</string>
    <string name="debug_select_dialog_innerbutton">Dev</string>
    <string name="debug_select_dialog_testbutton">Test</string>
    <string name="debug_select_dialog_oraclebutton">Oracle</string>
    <string name="debug_select_dialog_shanchatbutton">Tulin</string>
    <string name="room_input_hint">Room Number</string>
    <string name="room_input_hint_username">User Name</string>
    <string name="room_connect_button">Join</string>
    <string name="room_number">Room</string>
    <string name="connection_duration">Duration</string>
    <string name="network_traffic">Traffic</string>
    <string name="network_traffic_receive">Rcv:</string>
    <string name="network_traffic_send">Send:</string>
    <string name="waiting_user_join">Waiting</string>
    <string name="room_join_observer">以旁听者身份加入</string>
    <string name="room_join_close_camera">加入时不开启摄像头</string>
    <string name="blink_copyright">blinkcloud.cn © Copyright BlinkTalk</string>

    <string name="settings_text_observer">Observer Mode</string>
    <string name="settings_text_observer_yes">Yes</string>
    <string name="settings_text_observer_no">No</string>
    <string name="settings_text_gpufliter">GPUImage Fliter</string>
    <string name="settings_text_srtp">SRTP</string>
    <string name="settings_text_connection">Quic</string>
    <string name="settings_text_gpufliter_yes">Yes</string>
    <string name="settings_text_gpufliter_no">No</string>
    <string name="settings_text_min_rate">Minimum Rate</string>
    <string name="settings_text_rate">Rate</string>
    <string name="settings_text_connection_mode">Connection Mode</string>
    <string name="settings_text_connection_mode_relay">Relay</string>
    <string name="settings_text_connection_mode_P2P">P2P</string>
    <string name="settings_text_coding_mode">Coding Mode</string>
    <string name="settings_text_resolution">Resolution</string>
    <string name="settings_text_fps">FPS</string>
    <string name="settings_text_connectionType_quic">Yes</string>
    <string name="settings_text_connectionType_tcp">No</string>

    <string name="meeting_control_invite_url">会议邀请：\n\n 请输入以下会议ID加入会议 \n 会议ID：%1$s \n \n如果您尚未安装客户端，请使用Chrome或Safari 11 打开以下地址加入会议：\n会议地址：%2$s</string>
    <string name="meeting_control_invite_tips">会议地址已经复制，请粘贴至任意沟通工具并发送给您要邀请的人即可。</string>
    <string name="meeting_control_inviteToOpen_camera">主持人邀请您打开摄像头\n是否接受？</string>
    <string name="meeting_control_inviteToOpen_microphone">主持人邀请您打开麦克风\n是否接受？</string>
    <string name="meeting_control_inviteToUpgrade">主持人邀请您参与讨论\n是否接受？</string>
    <string name="meeting_control_destroy_whiteBoard">退出后白板将被销毁\n是否继续退出？</string>
    <string name="meeting_control_no_whiteBoard">当前没有白板供查看，请等待其他人创建白板</string>
    <string name="meeting_control_OpenWiteBoard">建议横屏，能看的更清楚</string>


    <string name="settings_text_serverConfig">Server Settings</string>
    <string name="settings_text_serverCMP">Server CMP address</string>
    <string name="settings_text_serverURL_TOKEN">Server Token address</string>
    <string name="settings_text_APPId">APPID</string>
    <string name="settings_text_confirm">save</string>
    <string name="settings_text_cancel">cancel</string>
    <string name="btnsolpstr">你按疼人家啦！</string>
    <string name="saveSuccess">保存成功！</string>
    <string name="app_btn_loading">正在初始化</string>
    <string name="Waitingforinput">请输入会议室名称和用户名称!</string>
    <string name="Thecurrentnetworkisnotavailable">当前网络不可用</string>
</resources>