<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:background="#F2F2F2"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_166">

                <ImageView
                    android:id="@+id/img_logo"
                    android:layout_width="@dimen/dp_100"
                    android:layout_height="@dimen/dp_100"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="@dimen/dp_16"
                    android:contentDescription="@string/app_name"
                    android:scaleType="centerCrop"
                    android:src="@mipmap/ic_launcher" />

                <ImageView
                    android:id="@+id/connect_settings"
                    android:layout_width="@dimen/dp_50"
                    android:layout_height="@dimen/dp_50"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:padding="@dimen/dp_13"
                    android:scaleType="centerCrop"
                    android:src="@mipmap/img_settings" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/main_page_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/blink_description"
                    android:textColor="@color/blink_text_green"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/main_page_version_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/main_page_version"
                    android:layout_centerHorizontal="true"
                    android:text="@string/blink_description_version"
                    android:textColor="@color/blink_text_green"
                    android:textSize="18sp" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="@dimen/dp_30"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:paddingRight="@dimen/dp_30"
                android:paddingTop="@dimen/dp_40">

                <TextView
                    android:id="@+id/room_number_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/room_description"
                    android:textAlignment="center"
                    android:textColor="@color/blink_blue"
                    android:textSize="20sp" />


                <EditText
                    android:id="@+id/room_inputnumber"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_48"
                    android:layout_marginTop="@dimen/dp_10"
                    android:gravity="center"
                    android:hint="@string/room_input_hint"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="@color/blink_text_grey"
                    android:textColorHint="@color/blink_grey" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/room_userName"
                    android:textAlignment="center"
                    android:textColor="@color/blink_blue"
                    android:textSize="20sp" />


                <EditText
                    android:id="@+id/room_userName"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_48"
                    android:layout_marginTop="@dimen/dp_10"
                    android:gravity="center"
                    android:hint="@string/room_input_hint_username"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="@color/blink_text_grey"
                    android:textColorHint="@color/blink_grey" />

                <android.support.v7.widget.AppCompatCheckBox
                    android:id="@+id/room_cb_close_camera"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_10"
                    android:text="@string/room_join_close_camera"
                    android:textColor="@color/blink_text_grey"
                    android:textSize="14sp" />

                <android.support.v7.widget.AppCompatCheckBox
                    android:id="@+id/room_cb_observer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/room_join_observer"
                    android:textColor="@color/blink_text_grey"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/connect_button"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_48"
                    android:layout_marginTop="@dimen/dp_20"
                    android:layout_marginBottom="@dimen/dp_20"
                    android:gravity="center"
                    android:text="@string/room_connect_button"
                    android:textAllCaps="false"
                    android:textColor="#ffffff"
                    android:textSize="18sp" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/blink_copyright"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/dp_10"
            android:gravity="center"
            android:visibility="gone"
            android:text="@string/blink_copyright"
            android:textColor="@color/blink_text_grey"
            android:textSize="14sp" />


    </RelativeLayout>


</RelativeLayout>